# CandlesDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
CandlesDB/: candles.py  database.py  utils.py  web.py
